--- a/.github/workflows/ledger.yml
+++ b/.github/workflows/ledger.yml
@@ -4,12 +4,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches:
-      - main
-      - master
+      - devnet
   pull_request:
     branches:
-      - main
-      - master
+      - devnet
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,6 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: 'devnet'
           submodules: true
 
       - name: Build with Clang Static Analyzer
