--- a/.github/workflows/check_version.yml
+++ b/.github/workflows/check_version.yml
@@ -1,9 +1,9 @@
-name: "Verify PRs to devnet"
+name: "Verify PRs to polkadot"
 
 on:
   pull_request:
     branches:
-      - devnet
+      - polkadot
 
 jobs:
   configure:
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: 'devnet'
+          ref: 'polkadot'
           submodules: true
 
       - name: Invoke `version`
