--- a/.github/workflows/ledger.yml
+++ b/.github/workflows/ledger.yml
@@ -4,10 +4,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches:
-      - devnet
+      - polkadot
   pull_request:
     branches:
-      - devnet
+      - polkadot
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: 'devnet'
+          ref: 'polkadot'
           submodules: true
 
       - name: Build with Clang Static Analyzer
