--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,10 @@ on:
     tags:
       - v*
     branches:
-      - devnet
+      - polkadot
   pull_request:
     branches:
-      - devnet
+      - polkadot
   workflow_dispatch:
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Install deps
         run: |
           sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Install deps
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
@@ -76,7 +76,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Build Standard app
         shell: bash -l {0}
         run: |
@@ -103,7 +103,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Build Standard app
         shell: bash -l {0}
         run: |
@@ -125,7 +125,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Build Standard app
         shell: bash -l {0}
         run: |
@@ -203,7 +203,7 @@ jobs:
 
   build_package_0:
     needs: [configure, build, build_nano_S, build_nano_SP, build_nano_X]
-    if: ${{ github.ref == 'refs/heads/devnet' }}
+    if: ${{ github.ref == 'refs/heads/polkadot' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/builder-bolos:latest
@@ -217,7 +217,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Install deps
         run: pip install ledgerblue
 
@@ -237,14 +237,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           files: ./app/pkg/installer_nanos.sh
-          target_commitish: 'devnet'
-          tag_name: ${{ steps.nanos.outputs.tag_name }}-devnet
+          target_commitish: 'polkadot'
+          tag_name: ${{ steps.nanos.outputs.tag_name }}-polkadot
           draft: false
           prerelease: false
 
   build_package_1:
     needs: [configure, build, build_nano_S, build_nano_SP, build_nano_X]
-    if: ${{ github.ref == 'refs/heads/devnet' }}
+    if: ${{ github.ref == 'refs/heads/polkadot' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/builder-bolos:latest
@@ -258,7 +258,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Install deps
         run: pip install ledgerblue
 
@@ -278,14 +278,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           files: ./app/pkg/installer_nanos_xl.sh
-          target_commitish: 'devnet'
-          tag_name: ${{ steps.nanos_xl.outputs.tag_name }}-devnet
+          target_commitish: 'polkadot'
+          tag_name: ${{ steps.nanos_xl.outputs.tag_name }}-polkadot
           draft: false
           prerelease: false
 
   build_package_2:
     needs: [configure, build, build_nano_S, build_nano_SP, build_nano_X]
-    if: ${{ github.ref == 'refs/heads/devnet' }}
+    if: ${{ github.ref == 'refs/heads/polkadot' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/builder-bolos:latest
@@ -299,7 +299,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
-          ref: 'devnet'
+          ref: 'polkadot'
       - name: Install deps
         run: pip install ledgerblue
 
@@ -319,7 +319,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           files: ./app/pkg/installer_nanos_plus.sh
-          target_commitish: 'devnet'
-          tag_name: ${{ steps.nanosp.outputs.tag_name }}-devnet
+          target_commitish: 'polkadot'
+          tag_name: ${{ steps.nanosp.outputs.tag_name }}-polkadot
           draft: false
           prerelease: false
